@@ -5,10 +5,8 @@ use Catmandu ':all';
 
 use_ok 'Catmandu::Fix::aref_query';
 
-my $fixer = Catmandu::Fix::aref_query->new(
-    field => 'title',
-    query => 'dc_title'
-);
+my $fixer = Catmandu::Fix::aref_query->new( 'dc_title' => 'title' );
+is $fixer->field, 'title';
 
 my $rdf = importer('RDF', file => 't/example.ttl')->first;
 ($rdf->{_uri}) = keys %$rdf;
@@ -20,5 +18,9 @@ is_deeply $rdf, {
     '_uri' => 'http://example.org',
     title => "B\x{c4}R"
 }, 'simple RDF fix';
+
+$rdf = importer('RDF', file => 't/example.ttl')->first;
+Catmandu::Fix::aref_query->new('http://example.org','dc_title','label')->fix($rdf);
+is $rdf->{label}, "B\x{c4}R";
 
 done_testing;
